--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,30 +17,42 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.AttractionsActivity"
-            android:exported="false" />
+            android:exported="false">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.chachaup.kutravel.ui.LoginActivity" />
+        </activity>
         <activity
             android:name=".ui.VenueActivity"
-            android:exported="false" />
+            android:exported="false">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.chachaup.kutravel.ui.LoginActivity" />
+        </activity>
         <activity
             android:name=".ui.EventDetailActivity"
             android:exported="false" />
         <activity
             android:name=".ui.LoginActivity"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.CreateAccountActivity"
             android:exported="false" />
         <activity
             android:name=".ui.EventsActivity"
-            android:exported="false"/>
+            android:exported="false">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.chachaup.kutravel.ui.LoginActivity" />
+        </activity>
         <activity
             android:name=".ui.MainActivity"
-            android:exported="true">
-             <intent-filter>
-                 <action android:name="android.intent.action.MAIN" />
-                 <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
-        </activity>
+            android:exported="false"/>
     </application>
 
 </manifest>
